--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
     <title>El titulo del post</title>
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog post</h1>
+    <h1>Aqui vamos a hacer un su vida</h1>
     <p>Y este es el parrafo de inicio</p>
 </body>
 </html>
