--- a/blogpost.html
+++ b/blogpost.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+    <meta http-equiv=”Content-Type” content=”text/html; charset=UTF-8″ />
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Maryjose Cobos</title>
     <link rel="stylesheet" href="css/style.css">
-    <title>El titulo del post</title>
 </head>
 <body>
-    <h1>Aqui vamos a hacer un su vida</h1>
-    <p>Y este es el parrafo de inicio</p>
+    <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
+       <div id="post">
+            <h1>Hola Comunidad Platzi</h1>
+            <p>Esta es mi pequeña contribución, tratando de hacerlo solo un poco diferente para practiar mi HTML y CSS</p>
+        </div>
+    </div>
 </body>
 </html>
