Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <div id="container">
+        <div class="cabecera">
+            Aqui inicia la cabecera
+        </div>
         <div id="cabecera">
             Cabecera
         </div>
