Finalizada la cabecera naranja

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,11 +7,8 @@
 </head>
 <body>
     <div id="container">
-        <div class="cabecera">
-            Aqui inicia la cabecera
-        </div>
         <div id="cabecera">
-            Cabecera
+            Hyperblog
         </div>
        <div id="post">
             <h1>Hola Comunidad Platzi</h1>
