Agregado el contenido adicional al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta http-equiv=”Content-Type” content=”text/html; charset=UTF-8″ />
-<head>
+  <meta http-equiv=”Content-Type” content=”text/html; charset=UTF-8″ />
+  <head>
     <title>Maryjose Cobos</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <div id="container">
-        <div id="cabecera">
-            Cabecera
-        </div>
-       <div id="post">
-            <h1>Hola Comunidad Platzi</h1>
-            <p>Esta es mi pequeña contribución, tratando de hacerlo solo un poco diferente para practiar mi HTML y CSS</p>
-        </div>
+  
+      <div id="post">
+        <h1>Hola Comunidad Platzi</h1>
+        <p>
+          Esta es mi pequeña contribución, tratando de hacerlo solo un poco
+          diferente para practiar mi HTML y CSS
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias,
+          delectus?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias,
+          delectus?
+        </p>
+      </div>
     </div>
-</body>
+  </body>
 </html>
