--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="container">
-      <div id="cabecera">Hyperblog</div>
+      <div id="cabecera">HyperMaster</div>
  
       <div id="post">
         <h1>Hola Comunidad Platzi</h1>
