--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <meta http-equiv=”Content-Type” content=”text/html; charset=UTF-8″ />
   <head>
-    <title>Maryjose Cobos</title>
+    <title>Sebastian Infante</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
